Refine wording in security design philosophy document

--- a/03_セキュリティと監査/セキュリティの観点からの設計思想.md
+++ b/03_セキュリティと監査/セキュリティの観点からの設計思想.md
@@ -1,5 +1,5 @@
 # 🔐 セキュリティの観点からの設計思想
-「セキュリティの観点からの設計思想」は、システムやアプリケーションの**根本設計段階で「安全性を前提条件として組み込む」**ための基本的な考え方を指します。
+「セキュリティの観点からの設計思想」は、システムやアプリケーションの**根本設計段階で**「**安全性を前提条件として組み込む**」ための基本的な考え方を指します。
 以下では体系的に整理します。
 
 ---
