Update security design principles section titles

--- a/03_セキュリティと監査/01_セキュリティの観点からの設計思想.md
+++ b/03_セキュリティと監査/01_セキュリティの観点からの設計思想.md
@@ -1,13 +1,11 @@
-# 🔐 セキュリティの観点からの設計思想
+# 🔐 セキュリティ設計思想（Security Design Principles）
 
 「セキュリティの観点からの設計思想」は、システムやアプリケーションの**根本設計段階で**「**安全性を前提条件として組み込む**」ための基本的な考え方を指します。
 以下では体系的に整理します。
 
 ---
 
-## 🔐 セキュリティ設計思想（Security Design Principles）
-
-### 1. **最小権限の原則（Principle of Least Privilege）**
+## 1. **最小権限の原則（Principle of Least Privilege）**
 
 * 各ユーザー・プロセス・システムコンポーネントには、**必要最小限の権限のみ**を付与する。
 * 目的：攻撃者による侵害時の被害範囲を最小化。
@@ -18,7 +16,7 @@
 
 ---
 
-### 2. **多層防御（Defense in Depth）**
+## 2. **多層防御（Defense in Depth）**
 
 * 1つの防御が破られても他の層で守れるように、**複数の防御層**を設ける。
 * 例：
@@ -28,7 +26,7 @@
 
 ---
 
-### 3. **安全なデフォルト（Secure by Default）**
+## 3. **安全なデフォルト（Secure by Default）**
 
 * 初期状態が安全であるように設定する。
 * 例：
@@ -39,7 +37,7 @@
 
 ---
 
-### 4. **設計による安全性（Security by Design）**
+## 4. **設計による安全性（Security by Design）**
 
 * 後付けではなく、**要件定義・設計段階からセキュリティを組み込む。**
 * 例：
@@ -49,7 +47,7 @@
 
 ---
 
-### 5. **完全仲介（Complete Mediation）**
+## 5. **完全仲介（Complete Mediation）**
 
 * すべてのアクセス要求に対して**毎回検証を行う**。
 * キャッシュや一時的な承認情報を信用しない。
@@ -59,7 +57,7 @@
 
 ---
 
-### 6. **公開設計の原則（Open Design）**
+## 6. **公開設計の原則（Open Design）**
 
 * セキュリティは「設計が秘密であること」に依存してはいけない。
 * 例：
@@ -69,7 +67,7 @@
 
 ---
 
-### 7. **フェイルセーフ（Fail-Safe Defaults）**
+## 7. **フェイルセーフ（Fail-Safe Defaults）**
 
 * 障害発生時は**安全な状態**に戻る設計にする。
 * 例：
@@ -79,7 +77,7 @@
 
 ---
 
-### 8. **責任追跡性（Accountability / Auditing）**
+## 8. **責任追跡性（Accountability / Auditing）**
 
 * 誰が・いつ・何をしたかを**記録・追跡できる仕組み**を設計する。
 * 例：
@@ -89,7 +87,7 @@
 
 ---
 
-### 9. **心理的受容性（Psychological Acceptability）**
+## 9. **心理的受容性（Psychological Acceptability）**
 
 * セキュリティ対策は、**使いやすさと両立**させる。
 * ユーザーが避けずに正しく利用できる設計を行う。
@@ -99,7 +97,7 @@
 
 ---
 
-### 10. **脅威モデルとリスクベース設計**
+## 10. **脅威モデルとリスクベース設計**
 
 * あらゆるシステムはリソースと脅威を前提に設計する。
 * 設計段階で **STRIDE, DREAD, PASTA** などの手法を用いて脅威を整理。
