更新 02_ITコンサルタント.md

--- a/01_開発/01_企画/02_ITコンサルタント.md
+++ b/01_開発/01_企画/02_ITコンサルタント.md
@@ -1,15 +1,13 @@
+---
+
+# ◆ ITコンサルタントの主要タスク・方法・成果物（詳細版）
+
 以下では、IT業界におけるコンサルタントの具体的な作業内容（タスク・方法・成果物）を、実務レベルでわかりやすく整理して説明します。
 「システム開発」「運用改善」「経営×IT戦略」などの一般的なコンサル業務を横断的にまとめています。
 
-
 ---
 
-◆ ITコンサルタントの主要タスク・方法・成果物（詳細版）
-
-
----
-
-1. 現状調査・課題分析（As-Is/To-Be 分析）
+## 1. 現状調査・課題分析（As-Is/To-Be 分析）
 
 ▼ タスク
 
@@ -51,7 +49,7 @@ Fit/Gap分析表
 
 ---
 
-2. IT戦略立案・ロードマップ策定
+## 2. IT戦略立案・ロードマップ策定
 
 ▼ タスク
 
@@ -85,7 +83,7 @@ DXロードマップ
 
 ---
 
-3. 要件定義・RFP作成支援
+## 3. 要件定義・RFP作成支援
 
 ▼ タスク
 
@@ -123,7 +121,7 @@ RFP一式
 
 ---
 
-4. システム構想・アーキテクチャ設計
+## 4. システム構想・アーキテクチャ設計
 
 ▼ タスク
 
@@ -159,7 +157,7 @@ PoC（概念実証）
 
 ---
 
-5. プロジェクト管理（PMO支援）
+## 5. プロジェクト管理（PMO支援）
 
 ▼ タスク
 
@@ -199,7 +197,7 @@ QCD（品質、コスト、納期）指標による評価
 
 ---
 
-6. 業務改善・運用改善
+## 6. 業務改善・運用改善
 
 ▼ タスク
 
@@ -235,7 +233,7 @@ SLA/OLA 改訂案
 
 ---
 
-7. データ分析・BI導入
+## 7. データ分析・BI導入
 
 ▼ タスク
 
@@ -271,7 +269,7 @@ BIダッシュボード案
 
 ---
 
-8. 稼働後フォロー（定着化支援）
+## 8. 稼働後フォロー（定着化支援）
 
 ▼ タスク
 
@@ -303,7 +301,7 @@ FAQリスト
 
 ---
 
-◆ まとめ：ITコンサルは「課題抽出 → 解決策 → 実行支援 → 定着化」まで一貫対応
+## ◆ まとめ：ITコンサルは「課題抽出 → 解決策 → 実行支援 → 定着化」まで一貫対応
 
 全体の流れをまとめると次の通りです：
 
