更新 02_ITコンサルタント.md

--- a/01_開発/01_企画/02_ITコンサルタント.md
+++ b/01_開発/01_企画/02_ITコンサルタント.md
@@ -11,39 +11,39 @@
 
 ▼ タスク
 
-経営層／事業部門／現場メンバーへのヒアリング
+* 経営層／事業部門／現場メンバーへのヒアリング
 
-業務フロー分析（BPMNなど）
+* 業務フロー分析（BPMNなど）
 
-システム構成・インフラ構成の調査
+* システム構成・インフラ構成の調査
 
-データフロー（DFD）、インターフェース調査
+* データフロー（DFD）、インターフェース調査
 
-KPI・業務課題の整理
+* KPI・業務課題の整理
 
 
 ▼ 方法
 
-インタビューシート作成 → 聞き取り → 論点整理
+* インタビューシート作成 → 聞き取り → 論点整理
 
-業務プロセスの可視化ツール（Bizagi、Visio、draw.io など）
+* 業務プロセスの可視化ツール（Bizagi、Visio、draw.io など）
 
-調査ログやメトリクスからボトルネック分析
+* 調査ログやメトリクスからボトルネック分析
 
-Fit/Gap分析（現状と理想像の差分の見える化）
+* Fit/Gap分析（現状と理想像の差分の見える化）
 
 
 ▼ 成果物
 
-課題整理資料（業務/システム）
+* 課題整理資料（業務/システム）
 
-As-Is業務フロー図
+* As-Is業務フロー図
 
-システム構成図（現状）
+* システム構成図（現状）
 
-Fit/Gap分析表
+* Fit/Gap分析表
 
-課題一覧・対策案一覧
+* 課題一覧・対策案一覧
 
 
 
@@ -53,31 +53,31 @@ Fit/Gap分析表
 
 ▼ タスク
 
-全体最適化の方針策定
+* 全体最適化の方針策定
 
-IT中期計画の設計
+* IT中期計画の設計
 
-投資シミュレーション（ROI/TCO算定）
+* 投資シミュレーション（ROI/TCO算定）
 
-デジタル化/クラウド化の方向性策定
+* デジタル化/クラウド化の方向性策定
 
 
 ▼ 方法
 
-ビジネス要求整理 → 戦略上の論点設定
+* ビジネス要求整理 → 戦略上の論点設定
 
-年度別・カテゴリ別のロードマップ作成
+* 年度別・カテゴリ別のロードマップ作成
 
-投資対効果の見える化（コスト削減、効率化、売上貢献など）
+* 投資対効果の見える化（コスト削減、効率化、売上貢献など）
 
 
 ▼ 成果物
 
-IT戦略策定書
+* IT戦略策定書
 
-DXロードマップ
+* DXロードマップ
 
-投資計画・予算試算資料
+* 投資計画・予算試算資料
 
 
 
@@ -87,35 +87,35 @@ DXロードマップ
 
 ▼ タスク
 
-業務要件・システム要件の詳細化
+* 業務要件・システム要件の詳細化
 
-クラウド方針（AWS/Azure/GCP）の明確化
+* クラウド方針（AWS/Azure/GCP）の明確化
 
-セキュリティ/監査要件整理
+* セキュリティ/監査要件整理
 
-RFP（提案依頼書）作成
+* RFP（提案依頼書）作成
 
-ベンダー選定支援（提案評価）
+* ベンダー選定支援（提案評価）
 
 
 ▼ 方法
 
-業務フローを基に機能一覧を構築
+* 業務フローを基に機能一覧を構築
 
-情報セキュリティ基準（ISMS、FISC等）と照合
+* 情報セキュリティ基準（ISMS、FISC等）と照合
 
-評価基準作成（価格/性能/体制/スケジュールなど）
+* 評価基準作成（価格/性能/体制/スケジュールなど）
 
-ベンダー比較表作成
+* ベンダー比較表作成
 
 
 ▼ 成成果物
 
-要件定義書（業務/非機能）
+* 要件定義書（業務/非機能）
 
-RFP一式
+* RFP一式
 
-ベンダー評価レポート
+* ベンダー評価レポート
 
 
 
@@ -125,33 +125,33 @@ RFP一式
 
 ▼ タスク
 
-全体アーキテクチャの設計
+* 全体アーキテクチャの設計
 
-クラウド構成案（例：VPC設計、ECS/EKSの選定）
+* クラウド構成案（例：VPC設計、ECS/EKSの選定）
 
-データ連携方式の設計（ETL/ESB/API）
+* データ連携方式の設計（ETL/ESB/API）
 
-可用性/セキュリティ/運用性の要件定義
+* 可用性/セキュリティ/運用性の要件定義
 
 
 ▼ 方法
 
-既存構成の評価 → 問題点を特定 → あるべき構成を設計
+* 既存構成の評価 → 問題点を特定 → あるべき構成を設計
 
-アーキテクト視点の非機能要件の落とし込み
+* アーキテクト視点の非機能要件の落とし込み
 
-PoC（概念実証）
+* PoC（概念実証）
 
 
 ▼ 成果物
 
-アーキテクチャ設計書
+* アーキテクチャ設計書
 
-システム構想書
+* システム構想書
 
-クラウド構成図（AWS/Azure/GCP）
+* クラウド構成図（AWS/Azure/GCP）
 
-データフロー図
+* データフロー図
 
 
 
@@ -161,37 +161,37 @@ PoC（概念実証）
 
 ▼ タスク
 
-進捗管理（WBS作成・実績管理）
+* 進捗管理（WBS作成・実績管理）
 
-課題/リスク管理
+* 課題/リスク管理
 
-品質管理（レビュー、品質ゲート設定）
+* 品質管理（レビュー、品質ゲート設定）
 
-ベンダーコントロール
+* ベンダーコントロール
 
-会議体運営（日次/週次/定例）
+* 会議体運営（日次/週次/定例）
 
 
 ▼ 方法
 
-ガントチャート・WBSによる計画管理（MS Project、Backlog、Jira）
+* ガントチャート・WBSによる計画管理（MS Project、Backlog、Jira）
 
-課題管理票（Issue Log）での可視化
+* 課題管理票（Issue Log）での可視化
 
-QCD（品質、コスト、納期）指標による評価
+* QCD（品質、コスト、納期）指標による評価
 
-各チームの実績ヒアリング
+* 各チームの実績ヒアリング
 
 
 ▼ 成果物
 
-進捗報告資料
+* 進捗報告資料
 
-課題管理表・リスク管理表
+* 課題管理表・リスク管理表
 
-品質管理報告書
+* 品質管理報告書
 
-会議議事録
+* 会議議事録
 
 
 
@@ -201,33 +201,33 @@ QCD（品質、コスト、納期）指標による評価
 
 ▼ タスク
 
-属人化業務の棚卸し
+* 属人化業務の棚卸し
 
-RPA、AI、機械学習活用の企画
+* RPA、AI、機械学習活用の企画
 
-ITILベースの運用改善（インシデント、変更管理）
+* ITILベースの運用改善（インシデント、変更管理）
 
-SLA/OLA見直し
+* SLA/OLA見直し
 
 
 ▼ 方法
 
-As-Is業務棚卸し → オペレーション改善案を作成
+* As-Is業務棚卸し → オペレーション改善案を作成
 
-RPA可否分析（デスクワークの繰り返し作業を特定）
+* RPA可否分析（デスクワークの繰り返し作業を特定）
 
-ITILプロセスに基づく改善
+* ITILプロセスに基づく改善
 
 
 ▼ 成果物
 
-改善提案書
+* 改善提案書
 
-RPA対象業務リスト
+* RPA対象業務リスト
 
-運用改善レポート
+* 運用改善レポート
 
-SLA/OLA 改訂案
+* SLA/OLA 改訂案
 
 
 
@@ -237,33 +237,33 @@ SLA/OLA 改訂案
 
 ▼ タスク
 
-KPI設計
+* KPI設計
 
-BIツール導入（Tableau、Power BI）
+* BIツール導入（Tableau、Power BI）
 
-データマート設計
+* データマート設計
 
-予測モデルの要件整理（機械学習活用の場合）
+* 予測モデルの要件整理（機械学習活用の場合）
 
 
 ▼ 方法
 
-経営層のKPI要求ヒアリング → ダッシュボード構成設計
+* 経営層のKPI要求ヒアリング → ダッシュボード構成設計
 
-データ加工フロー設計（ETL/ELT）
+* データ加工フロー設計（ETL/ELT）
 
-必要データの定義（スキーマ作成）
+* 必要データの定義（スキーマ作成）
 
 
 ▼ 成果物
 
-KPI定義書
+* KPI定義書
 
-データモデル図
+* データモデル図
 
-BIダッシュボード案
+* BIダッシュボード案
 
-分析レポート
+* 分析レポート
 
 
 
@@ -273,29 +273,29 @@ BIダッシュボード案
 
 ▼ タスク
 
-操作マニュアル作成
+* 操作マニュアル作成
 
-利用者教育・研修企画
+* 利用者教育・研修企画
 
-運用ルール再構築
+* 運用ルール再構築
 
 
 ▼ 方法
 
-操作動画・手順書の作成
+* 操作動画・手順書の作成
 
-FAQ整備
+* FAQ整備
 
-業務担当者との改善サイクル（PDCA/アジャイル）
+* 業務担当者との改善サイクル（PDCA/アジャイル）
 
 
 ▼ 成果物
 
-操作マニュアル
+* 操作マニュアル
 
-FAQリスト
+* FAQリスト
 
-定着化支援レポート
+* 定着化支援レポート
 
 
 
@@ -318,8 +318,5 @@ FAQリスト
 
 
 5. 改善/定着化：運用改善・教育なども実施
-
-
-
 
 ---
