Update infrastructure requirements document

--- a/01_開発/02_要件定義/01_インフラ/01_要件定義工程インフラ成果物一覧.md
+++ b/01_開発/02_要件定義/01_インフラ/01_要件定義工程インフラ成果物一覧.md
@@ -36,13 +36,13 @@
 
 ---
 
-### 【C. 性能・容量・可用性系】
+### 【C. 性能・容量・可用(信頼)性系】
 
 | 成果物名           | 内容                                       | 作成目的         |
 | -------------- | ---------------------------------------- | ------------ |
 | サイジング要件書       | 処理量、トランザクション数、アクセス頻度を踏まえたCPU/メモリ/ストレージ算定 | 適切なリソース見積    |
 | 性能要件定義書        | 応答時間、スループット、同時接続数、バッチ処理時間など              | SLA・性能試験基準設定 |
-| 可用性・冗長化要件書     | 冗長構成、フェイルオーバー要件、RTO/RPO                  | 障害対策・運用基準明確化 |
+| 可用(信頼)性・冗長化要件書     | 冗長構成、フェイルオーバー要件、RTO/RPO                  | 障害対策・運用基準明確化 |
 | バックアップ・リストア要件書 | 取得周期、保存期間、対象データ、リストア手順レベル                | データ保全設計      |
 
 ---
@@ -94,11 +94,12 @@
 | --------- | ------------------------------- |
 | 全体構成・方針   | インフラ要件定義書、構成方針書、システム構成図         |
 | 環境構成      | 環境一覧表、サーバ一覧表、クラウド利用一覧、ネットワーク構成図 |
-| 性能・可用性    | サイジング要件、性能要件、可用性・冗長化要件、バックアップ要件 |
+| 性能・可用(信頼)性    | サイジング要件、性能要件、可用(信頼)性・冗長化要件、バックアップ要件 |
 | セキュリティ・運用 | セキュリティ要件、アクセス制御、監視・ログ要件、運用要件    |
 | 外部・非機能    | 非機能要件定義書、外部連携要件、認証設計書           |
 | コスト・契約    | 見積書、ライセンス管理一覧                   |
 | IaC・構成管理  | IaC範囲定義書、CI/CD構成概要、リポジトリ方針      |
 
 ---
+
 
