Update infrastructure requirements definition document

--- a/01_開発/02_要件定義/01_インフラ/01_要件定義工程インフラ成果物一覧.md
+++ b/01_開発/02_要件定義/01_インフラ/01_要件定義工程インフラ成果物一覧.md
@@ -100,6 +100,8 @@
 | コスト・契約    | 見積書、ライセンス管理一覧                   |
 | IaC・構成管理  | IaC範囲定義書、CI/CD構成概要、リポジトリ方針      |
 
+※なお、オンプレミスシステムの場合、データベース要件定義書も必要となります。
 ---
+
 
 
