--- a/01_開発/01_企画/02_ITコンサルタント.md
+++ b/01_開発/01_企画/02_ITコンサルタント.md
@@ -1,6 +1,6 @@
 ---
 
-# ◆ ITコンサルタントの主要タスク・方法・成果物（詳細版）
+# ◆ ITコンサルタントの主要作業
 
 以下では、**IT業界におけるコンサルタントの具体的な作業内容（タスク・方法・成果物）を、実務レベルでわかりやすく**整理して説明します。
 「システム開発」「運用改善」「経営×IT戦略」などの一般的なコンサル業務を横断的にまとめています。
