Fix table formatting in resource buffer document

--- a/01_開発/01_企画/コスト試算（見積もり）/03_リソースバッファ設定への影響要素.md
+++ b/01_開発/01_企画/コスト試算（見積もり）/03_リソースバッファ設定への影響要素.md
@@ -104,14 +104,12 @@ PM: 7日 × 1.5 = 11日
 ### ダッシュボード例
 ```
 キーパーソンバッファ状況（2024年1月-3月）
-┌─────────────┬──────────┬──────────┬──────────┐
-│  リソース   │ 計画残日数 │ 実績残日数 │ 利用率   │
-├─────────────┼──────────┼──────────┼──────────┤
-│ リードEng   │ 10日      │ 7日       │ 30%      │
-│ アーキテクト │ 8日       │ 5日       │ 38%      │
-│ デザイン責任者│ 6日       │ 4日       │ 33%      │
-└─────────────┴──────────┴──────────┴──────────┘
 ```
+| リソース | 計画残日数 | 実績残日数 | 利用率 |
+|-----------|---------|---------|---------|
+| リードEng | 10日 | 7日 | 30%  |
+| アーキテクト | 8日 | 5日 | 38%  |
+| デザイン責任者 | 6日 | 4日 | 33%  |
 
 ## 7. 組織規模による調整
 
