Update and rename 02_各管理領域活動概要.md to 02_各管理領域概要.md

--- a/01_開発/99_管理/02_各管理領域概要.md
+++ b/01_開発/99_管理/02_各管理領域概要.md
@@ -1,4 +1,4 @@
-# **各管理領域活動概要**
+# **各管理領域概要**
 以下では **PMBOK（主に PMBOK 第6版の知識エリア体系）に基づき、プロジェクト管理が扱う 10 個の管理領域を「目的 → 主な活動・ツール → 主な成果物 → PM の視点（注意点）」の4軸で詳しく解説**します。
 IT・システム開発プロジェクトで使える内容に寄せています。
 
