--- a/01_開発/02_要件定義/01_インフラ/02_ネットワークの設計＆構築.md
+++ b/01_開発/02_要件定義/01_インフラ/02_ネットワークの設計＆構築.md
@@ -1,3 +1,3 @@
 ネットワークの設計と構築の詳細は下記をご参照ください。
 ---
-[ネットワークの設計&構築](./../../../../../02_技術/ネットワークの設計&構築)
+[ネットワークの設計&構築](./../../../02_技術/ネットワークの設計%26構築)
