--- a/01_開発/99_管理/02_プロダクト管理（PdM）/01_プロダクト管理概要.md
+++ b/01_開発/99_管理/02_プロダクト管理（PdM）/01_プロダクト管理概要.md
@@ -3,7 +3,7 @@
 ## 1. 全体像：プロダクトマネージャーの本質と役割
 
 ### 定義と中核的な価値
-プロダクトマネージャー（PM）は、「製品（プロダクト）の責任者」として、市場のニーズとビジネス目標を結びつけ、顧客価値と事業価値の両方を最大化する役割を担います。単なる機能管理者ではなく、製品の「ミニCEO」として戦略から実行までを総合的にリードします。
+プロダクトマネージャー（PdM）は、「製品（プロダクト）の責任者」として、市場のニーズとビジネス目標を結びつけ、顧客価値と事業価値の両方を最大化する役割を担います。単なる機能管理者ではなく、製品の「ミニCEO」として戦略から実行までを総合的にリードします。
 
 ### 3つの主要責任領域
 1. **ビジョンと戦略**：製品の方向性と成功基準を定義
@@ -103,4 +103,4 @@
 
 プロダクトマネージャーは、単なる機能の優先順位付け役ではなく、市場の深い理解に基づき、顧客課題とビジネス目標を統合し、持続可能な価値を生み出す「製品のリーダー」です。成功するPMは、戦略的思考と実行力を併せ持ち、多様なステークホルダーを巻き込みながら、不確実性の中でも前進し続けることが求められます。
 
-製品開発はチームスポーツであり、PMは「コーチ兼キャプテン」として、チームが最高のパフォーマンスを発揮できる環境を整え、正しい問題を解決する方向に導くことが本質的な役割です。
+製品開発はチームスポーツであり、PdMは「コーチ兼キャプテン」として、チームが最高のパフォーマンスを発揮できる環境を整え、正しい問題を解決する方向に導くことが本質的な役割です。
