--- a/01_開発/99_管理/01_プロジェクト管理（PM）/01_プロジェクト管理概要.md
+++ b/01_開発/99_管理/01_プロジェクト管理（PM）/01_プロジェクト管理概要.md
@@ -1,4 +1,4 @@
-# **■ 1. プロジェクト管理概要**
+# **■ 1. プロジェクト管理（Project Management）概要**
 
 以下では**プロジェクト管理（Project Management）を“全体像→主要プロセス→成果物→成功のポイント”の流れで体系的に詳しく説明**します。IT 系・システム開発プロジェクトを前提にしていますが、一般のプロジェクトにも適用できます。
 
