Fix formatting in ビジネス分析.md

--- a/01_開発/01_企画/ITコンサルタント/04_ビジネス分析.md
+++ b/01_開発/01_企画/ITコンサルタント/04_ビジネス分析.md
@@ -1,6 +1,6 @@
 # ◆ ビジネス分析
 
-以下では、**ITコンサルタントにおけるビジネス分析（Business Analysis）**を、
+以下では、**ITコンサルタントにおけるビジネス分析**（**Business Analysis**）を、
 **実務でそのまま使える粒度**で体系的に説明します。
 （※業務改革・DX・基幹刷新・クラウド移行・AI導入など、ほぼ全案件で共通する内容です）
 
@@ -10,9 +10,9 @@
 
 #### 目的
 
-* **「経営・業務の課題を構造化し、ITで解くべき問題に翻訳する」**
+* 「**経営・業務の課題を構造化し、ITで解くべき問題に翻訳する**」
 * 要件定義の前段として
-  **Why（なぜやるか）／What（何を変えるか）** を明確にする
+  **Why**（**なぜやるか**）／**What**（**何を変えるか**） を明確にする
 
 #### ビジネス分析で失敗すると
 
