Expand business analysis examples for IT consulting
Added detailed examples of business analysis for DX and core system renewal projects, including background, analysis, strategies, and outcomes.

--- a/01_開発/01_企画/ITコンサルタント/04_ビジネス分析.md
+++ b/01_開発/01_企画/ITコンサルタント/04_ビジネス分析.md
@@ -302,3 +302,223 @@
 > プロジェクト成否を左右する最重要工程です。
 
 ---
+
+# ◆ ビジネス分析の実案例
+
+以下では、**ITコンサルタント視点での**「**DX案件**」と「**基幹刷新案件**」について、
+**実際の現場で経験した具体例**を、
+**背景 → 課題 → ビジネス分析 → 施策 → 成果物**の流れで整理します。
+
+---
+
+## ① DX案件の具体例
+
+### 例：製造業における受注～生産DX
+
+---
+
+### 1. 背景・経営課題
+
+* 市場ニーズの多様化・短納期化
+* 属人化した受注・生産計画
+* 在庫過多・欠品の頻発
+
+#### 経営目標
+
+* リードタイム30%短縮
+* 在庫回転率向上
+* 利益率改善
+
+---
+
+### 2. ビジネス分析（実施内容）
+
+#### As-Is分析
+
+* 受注：Excel・メール・電話
+* 生産計画：熟練者の経験依存
+* 在庫：月次集計、リアルタイム把握不可
+
+##### 使用成果物
+
+* As-Is業務フロー（受注～出荷）
+* 業務負荷分析
+* 課題一覧（属人化／可視性不足）
+
+---
+
+#### 課題構造化
+
+```
+属人化
+  ↓
+計画精度低下
+  ↓
+在庫過多・欠品
+  ↓
+利益率悪化
+```
+
+---
+
+### 3. To-Be構想（DX視点）
+
+#### To-Be業務像
+
+* 受注：Web/EDI統合
+* 生産計画：AI需要予測＋制約条件自動計画
+* 在庫：IoT連携でリアルタイム可視化
+
+#### IT構想
+
+* クラウドERP
+* AI需要予測
+* データレイク
+
+---
+
+### 4. 施策・ロードマップ
+
+| フェーズ   | 内容        |
+| ------ | --------- |
+| Phase1 | データ統合・可視化 |
+| Phase2 | 生産計画DX    |
+| Phase3 | AI高度化     |
+
+---
+
+### 5. 成果物
+
+* DX構想書
+* 業務改革ロードマップ
+* 投資対効果資料（ROI）
+* RFP
+
+---
+
+### 6. 成果
+
+* 在庫20%削減
+* 納期遵守率向上
+* 生産計画作成時間80%削減
+
+---
+
+## ② 基幹刷新案件の具体例
+
+### 例：流通業の販売・在庫・会計システム刷新
+
+---
+
+### 1. 背景・課題
+
+* 基幹システム20年以上稼働
+* 保守要員不足
+* 法制度改正対応が困難
+
+#### 経営目標
+
+* 安定運用
+* 業務標準化
+* ITコスト最適化
+
+---
+
+### 2. ビジネス分析（実施内容）
+
+#### As-Is分析
+
+* 独自カスタマイズ多数
+* 業務ごとに別システム
+* データ整合性問題
+
+##### 成果物
+
+* As-Is業務フロー
+* システム構成図
+* カスタマイズ一覧
+
+---
+
+#### 課題構造化
+
+```
+過剰カスタマイズ
+  ↓
+保守困難
+  ↓
+業務改善不可
+```
+
+---
+
+### 3. To-Be構想（刷新視点）
+
+#### To-Be業務像
+
+* 業務標準化（Fit to Standard）
+* 共通マスタ統合
+* データ一元管理
+
+#### IT構想
+
+* ERP（SAP / Oracle / Dynamics）
+* クラウド基盤
+* API連携
+
+---
+
+### 4. 移行戦略
+
+| 観点   | 内容      |
+| ---- | ------- |
+| データ  | 段階移行    |
+| 業務   | 並行稼働    |
+| システム | モジュール分割 |
+
+---
+
+### 5. 成果物
+
+* 基幹刷新構想書
+* 業務・ITギャップ分析
+* 要件定義書
+* 移行計画書
+
+---
+
+### 6. 成果
+
+* 保守コスト30%削減
+* 障害件数大幅減
+* 制度改正対応スピード向上
+
+---
+
+## ③ DX案件と基幹刷新案件の違い（整理）
+
+| 観点  | DX案件   | 基幹刷新案件  |
+| --- | ------ | ------- |
+| 主目的 | 競争力向上  | 安定運用    |
+| 視点  | 攻め     | 守り      |
+| 技術  | AI・データ | ERP・標準化 |
+| 業務  | 変える    | 揃える     |
+
+---
+
+## ④ まとめ
+
+**DX案件**
+
+> 「DX案件は、業務プロセスとデータを起点に、
+> AIやクラウドを活用した競争力向上の構想策定です。」
+
+**基幹刷新案件**
+
+> 「基幹刷新は、As-Is分析からFit to Standard方針を定め、
+> 業務標準化と段階移行を重視した刷新構想です。」
+
+---
+
+
+
