--- a/01_開発/99_管理/03_品質管理/02_品質保証（QA）.md
+++ b/01_開発/99_管理/03_品質管理/02_品質保証（QA）.md
@@ -48,7 +48,7 @@
 
 #### 管理目的
 
-* **「作るべきか／何を作るべきか」を誤らない**
+* 「**作るべきか／何を作るべきか**」**を誤らない**
 * ビジネス失敗リスクの予防
 
 #### QA方針
@@ -91,7 +91,7 @@
 
 #### QA方針
 
-* 要件は**検証可能（Testable）**であること
+* 要件は**検証可能**（**Testable**）であること
 * 「誰が見ても同じ解釈」
 
 #### 管理内容
