--- a/01_開発/99_管理/04_アジャイル開発/03_アジャイル開発における品質管理.md
+++ b/01_開発/99_管理/04_アジャイル開発/03_アジャイル開発における品質管理.md
@@ -1,3 +1,4 @@
 アジャイル開発における品質管理は下記をご参照ください。
 ---
-[アジャイル開発における品質管理](./../../../../../tree/main/01_開発/99_管理/03_品質管理/03_アジャイル開発における品質管理（QC）.md)
+* [アジャイル開発における品質管理](./../../../../../tree/main/01_開発/99_管理/03_品質管理/03_アジャイル開発における品質管理（QC）.md)
+* [アジャイル品質管理における実務テンプレート](./../../../../../tree/main/01_開発/99_管理/03_品質管理/04_アジャイル品質管理における実務テンプレート.md)
