--- a/01_開発/03_基本設計/02_AP基盤/03_方式設計/セキュリティ・脆弱対策/セキュリティ設計書.md
+++ b/01_開発/03_基本設計/02_AP基盤/03_方式設計/セキュリティ・脆弱対策/セキュリティ設計書.md
@@ -1,5 +1,5 @@
 
-# 基本設計書　セキュリティ方式
+# ◆ 基本設計書　セキュリティ方式
 「**基本設計におけるセキュリティ方式設計**」は、システムのアーキテクチャや機能要件を踏まえて、どのように **安全性を確保するか** を定義する工程です。要件定義で決めた「セキュリティ要件」を実現するために、具体的な方式や仕組みを整理することが目的になります。以下に詳しくご説明します。
 
 ---
