--- a/01_開発/03_基本設計/02_AP基盤/03_方式設計/方式設計書_暗号化復号化.md
+++ b/01_開発/03_基本設計/02_AP基盤/03_方式設計/方式設計書_暗号化復号化.md
@@ -77,9 +77,9 @@ graph TD
    · オンプレ環境: HSM (Hardware Security Module)
    · 開発環境: 環境変数 (Vault等と連携)
 
-# 5. システム間連携
+## 5. システム間連携
 
-## 5.1 暗号化データフロー
+### 5.1 暗号化データフロー
 
 ```mermaid
 sequenceDiagram
@@ -94,7 +94,7 @@ sequenceDiagram
     API-->>Client: レスポンス (TLS 1.3)
 ```
 
-## 5.2 エンドツーエンド暗号化
+### 5.2 エンドツーエンド暗号化
 
  1. クライアント側暗号化:
    · WebCrypto API使用
@@ -110,39 +110,39 @@ sequenceDiagram
        return aes_decrypt(ciphertext, session_key, iv)
    ```
 
-# 6. セキュリティ基準
+## 6. セキュリティ基準
 
-## 6.1 コンプライアンス対応
+### 6.1 コンプライアンス対応
 
 規格 要件 対応方式
 PCI DSS カードデータ暗号化 AES-256 + HSM
 GDPR 個人データ保護 擬似匿名化 + 暗号化
 ISO27001 暗号化ポリシー 鍵管理含む包括的対応
 
-## 6.2 監査要件
+### 6.2 監査要件
 ```
 1. すべての暗号化操作のロギング
 2. 鍵アクセス監査証跡 (Who/When/What)
 3. 定期的な脆弱性診断 (TLS設定など)
 ```
 
-# 7. 例外処理
+## 7. 例外処理
 
-## 7.1 エラーケース対応
+### 7.1 エラーケース対応
 
 エラー種別 対応方針
 復号化失敗 アラート発報 + 3回リトライ後停止
 鍵期限切れ 自動鍵更新プロセス起動
 アルゴリズム非対応 フォールバック禁止、エラー返却
 
-## 7.2 フォールバックポリシー
+### 7.2 フォールバックポリシー
 
 · 旧式アルゴリズムへのフォールバックを許可しない
 · 互換性が必要な場合、デュアル暗号化方式を採用 (例: 新旧両方式で暗号化して保存)
 
-# 8. 実装ガイドライン
+## 8. 実装ガイドライン
 
-## 8.1 禁止事項
+### 8.1 禁止事項
 
 · 独自暗号化アルゴリズムの実装禁止
 · 固定IVの使用禁止
@@ -164,25 +164,25 @@ def encrypt_gcm(plaintext: str, key: bytes) -> dict:
     }
 ```
 
-# 9. パフォーマンス考慮
+## 9. パフォーマンス考慮
 
-## 9.1 ベンチマーク指標
+### 9.1 ベンチマーク指標
 
 操作 許容レイテンシ 備考
 暗号化 (AES-256-GCM) < 5ms/1MB HWアクセラレーション利用時
 復号化 (AES-256-GCM) < 3ms/1MB 
 TLSハンドシェイク < 300ms セッション再開時 < 100ms
 
-## 9.2 最適化手法
+### 9.2 最適化手法
 ```
 1. CPUネイティブ命令利用 (AES-NI)
 2. セッションキャッシュ (TLSセッション再開)
 3. 一括処理による暗号化 (ストリーム処理回避)
 ```
 
-# 10. 移行計画
+## 10. 移行計画
 
-## 10.1 段階的導入
+### 10.1 段階的導入
 ```
 1. 監査対象データの特定
 2. 暗号化ポリシー策定
@@ -191,7 +191,7 @@ TLSハンドシェイク < 300ms セッション再開時 < 100ms
 5. 継続的改善
 ```
 
-## 10.2 レガシーシステム対応
+### 10.2 レガシーシステム対応
 ```
 1. 暗号化ゲートウェイの導入
 2. プロキシ層での暗号化
