--- a/01_開発/03_基本設計/02_AP基盤/05_構成管理/システム設定書＆設定パラメータシート.md
+++ b/01_開発/03_基本設計/02_AP基盤/05_構成管理/システム設定書＆設定パラメータシート.md
@@ -1,5 +1,5 @@
 
-# システム設定書及び設定パラメータシート
+# ◆ システム設定書及び設定パラメータシート
 
 ここでは、**Spring Boot 3.4** を用いた Webアプリケーション開発における
 「①システム設定書（設計書）」および「②設定パラメータシート（Excel想定構成）」の設計を示します。
