--- a/01_開発/03_基本設計/02_AP基盤/05_構成管理/バージョン管理.md
+++ b/01_開発/03_基本設計/02_AP基盤/05_構成管理/バージョン管理.md
@@ -1,4 +1,4 @@
-# **バージョン管理基本設計書**
+# ◆ バージョン管理基本設計書
 
 以下に、構成管理における**バージョン管理の基本設計書**のテンプレートを提供します。実際のプロジェクトに適用する際は、組織の規約や技術スタックに合わせてカスタマイズしてください。
 
