--- a/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_バッチ処理.md
+++ b/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_バッチ処理.md
@@ -601,7 +601,7 @@ public TaskExecutor taskExecutor() {
 
 ## 1. 設計方針
 - 共通機能はスケルトンクラスに実装し、業務毎のバッチはこれを継承して開発する
-- 以下の共通機能をスケルトンに実装:
+- 以下の共通機能をスケルトンまたは共通部品に実装:
   - バッチ起動パラメータの検証
   - 例外処理
   - ロギング
