--- a/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_オンライン処理.md
+++ b/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_オンライン処理.md
@@ -569,7 +569,7 @@ public class WebMvcConfig implements WebMvcConfigurer {
 
 基底（共通）機能と業務機能を明確に分離し、さらに業務毎にもパッケージを分ける構成に変更します。以下に再設計したプロジェクト構成と主要なコンポーネントを示します。
 
-## 改訂版プロジェクト構成
+## プロジェクト構成
 
 ```
 src/main/java/
@@ -639,7 +639,7 @@ business/
     └── dto/         # 業務DTO
 ```
 
-### 3. 改訂版基底コントローラ (BaseController.java)
+### 3. 基底コントローラ (BaseController.java)
 ```java
 package com.example.apbase.controller;
 
@@ -716,7 +716,7 @@ public class UserController extends BaseController<User, Long> {
 }
 ```
 
-### 5. 改訂版基底サービス (BaseService.java)
+### 5. 基底サービス (BaseService.java)
 ```java
 package com.example.apbase.service;
 
