--- a/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_バッチ処理.md
+++ b/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_バッチ処理.md
@@ -1,4 +1,4 @@
-# Spring Batch スケルトン設計書 (AP基盤)
+# ◆ Spring Batch スケルトン設計書 (AP基盤)
 
 ## 1. プロジェクト概要
 
@@ -597,7 +597,7 @@ public TaskExecutor taskExecutor() {
 
 ---
 
-# SpringBatch スケルトン設計書 (AP基盤)
+# ◆ SpringBatch スケルトン設計書 (AP基盤)
 
 ## 1. 設計方針
 - 共通機能はスケルトンクラスに実装し、業務毎のバッチはこれを継承して開発する
