--- a/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_オンライン処理.md
+++ b/01_開発/03_基本設計/02_AP基盤/06_開発ガイド/スケルトン設計/スケルトン設計書_オンライン処理.md
@@ -261,7 +261,7 @@ public class DatabaseConfig {
 
 ---
 
-# SpringBootオンライン処理スケルトン設計書 (AP基盤)
+# ◆ SpringBootオンライン処理スケルトン設計書 (AP基盤)
 
 ## 1. 設計方針
 - 共通機能をベースクラスとして実装し、業務機能はこれを継承して実装
