--- a/01_開発/03_基本設計/基本設計.md
+++ b/01_開発/03_基本設計/基本設計.md
@@ -1,5 +1,5 @@
 
-# 汎用 基本設計書（テンプレート）
+# ◆ 汎用 基本設計書（テンプレート）
 汎用（テンプレート化された）**基本設計書**をそのまま使える形で作成します。以下は、ソフトウェア／業務系システム向けの汎用的で実務的な基本設計テンプレートです。会社やプロジェクトに合わせてコピーして使えるよう、説明・記入例・チェックリストも含めています。
 
 ---
@@ -219,4 +219,5 @@ Response 200:
 * [ ] テスト観点と受入基準があるか
 
 ---
+
 
