--- a/01_開発/03_基本設計/基本設計（システム）テスト計画書.md
+++ b/01_開発/03_基本設計/基本設計（システム）テスト計画書.md
@@ -1,4 +1,4 @@
-# テスト計画書（基本設計段階）
+# ◆ テスト計画書（基本設計段階）
 
 **基本設計段階におけるテスト計画書のひな型**です。今回はAP基盤（アプリケーション基盤）を想定し、基本設計時点で立案するテスト計画としてまとめています。
 
@@ -113,4 +113,5 @@
 この計画書は、**基本設計終了時点での方針レベル**のため、詳細なテストケースやスクリプトは詳細設計完了後に策定する想定です。
 
 ---
+
 
