--- a/02_技術/ネットワーク設計&構築/04_オンプレミスシステムにおけるネットワーク設計と構築.md
+++ b/02_技術/ネットワーク設計&構築/04_オンプレミスシステムにおけるネットワーク設計と構築.md
@@ -1,4 +1,4 @@
-# オンプレミス環境：ネットワーク設計・構築（詳細ガイド）
+# ◆ オンプレミス環境：ネットワーク設計・構築（詳細ガイド）
 
 以下は、オンプレミスのネットワーク設計〜構築〜引き渡し・運用定着までの**実務で使えるフロー**と、各工程で必要となる**入力データ／情報、具体タスク、成果物（テンプレ例含む）、手順書の骨子**です。実プロジェクトでそのまま使える実務寄りのチェックリストも付けます。
 
