--- a/02_技術/マイクロサービス/DB設計/06_マスタテーブルサービス.md
+++ b/02_技術/マイクロサービス/DB設計/06_マスタテーブルサービス.md
@@ -2,9 +2,11 @@
 
 マイクロサービスアーキテクチャでは、マスタデータの管理が重要な課題です。以下に効果的な設計パターンを提案します。
 
-マスタデータの種類に応じた設計アプローチ
+---
 
-1. 参照専用マスタデータ（推奨）
+## マスタデータの種類に応じた設計アプローチ
+
+### 1. 参照専用マスタデータ（推奨）
 
 ```mermaid
 graph TD
@@ -31,7 +33,7 @@ class OrderService:
         # 注文処理続行
 ```
 
-2. データ重複パターン（高パフォーマンス向け）
+### 2. データ重複パターン（高パフォーマンス向け）
 
 ```mermaid
 graph LR
@@ -67,9 +69,9 @@ def handle_product_updated(event):
     )
 ```
 
-設計パターン別詳細
+## 設計パターン別詳細
 
-パターン1: マスタ専用サービス
+### パターン1: マスタ専用サービス
 
 ```python
 # master_service/app.py
@@ -87,7 +89,7 @@ def update_product():
     pass
 ```
 
-パターン2: イベント駆動レプリケーション
+### パターン2: イベント駆動レプリケーション
 
 ```python
 # マスタサービスでの更新処理
@@ -104,7 +106,7 @@ def update_product_price(product_id, new_price):
     })
 ```
 
-キャッシュ戦略
+## キャッシュ戦略
 
 Redisキャッシュの導入
 
@@ -125,9 +127,9 @@ def get_product_with_cache(product_id):
     return product
 ```
 
-整合性保証のための設計
+## 整合性保証のための設計
 
-1. イベントソーシングパターン
+### 1. イベントソーシングパターン
 
 ```python
 class ProductMaster:
@@ -150,7 +152,7 @@ class ProductMaster:
         return state
 ```
 
-2. CDC（Change Data Capture）パターン
+### 2. CDC（Change Data Capture）パターン
 
 ```sql
 -- PostgreSQLの論理レプリケーションを活用
@@ -162,7 +164,7 @@ CONNECTION 'host=master_db port=5432 dbname=master'
 PUBLICATION master_publication;
 ```
 
-サービス間のデータ依存性管理
+## サービス間のデータ依存性管理
 
 バージョン管理の導入
 
@@ -190,9 +192,9 @@ Response:
 }
 ```
 
-フェデレーテッドクエリパターン
+## フェデレーテッドクエリパターン
 
-GraphQLの活用
+### GraphQLの活用
 
 ```graphql
 # マスタデータ用GraphQLスキーマ
@@ -223,9 +225,9 @@ class Query(graphene.ObjectType):
         return get_product_from_master(id)
 ```
 
-監視と運用設計
+## 監視と運用設計
 
-データ整合性監視
+### データ整合性監視
 
 ```python
 # 定期的な整合性チェック
@@ -241,7 +243,7 @@ def check_data_consistency():
                 alert_inconsistency(master.id, service, 'price')
 ```
 
-推奨アプローチ選択の判断基準
+## 推奨アプローチ選択の判断基準
 
 シナリオ 推奨パターン 理由
 リアルタイム整合性必須 マスタ専用サービス + API呼び出し 常に最新データを提供
@@ -249,7 +251,7 @@ def check_data_consistency():
 大規模データ CDCパターン 効率的なデータ同期
 複雑なクエリ要求 GraphQLフェデレーション 柔軟なデータ取得
 
-セキュリティ考慮事項
+## セキュリティ考慮事項
 
 ```sql
 -- マスタデータへのアクセス制御
