--- a/02_技術/マイクロサービス/DB設計/01_マイクロサービスデータベース構成設計書.md
+++ b/02_技術/マイクロサービス/DB設計/01_マイクロサービスデータベース構成設計書.md
@@ -194,7 +194,7 @@ graph TD
 
 ---
 
-# マイクロサービスにおけるPostgreSQLの最適な設計
+# ◆ マイクロサービスにおける最適な設計
 
 マイクロサービスアーキテクチャでは、データベース設計が非常に重要です。以下に最適なインスタンス、データベース設計を提案します。
 
