--- a/02_技術/マイクロサービス/DB設計/01_マイクロサービスデータベース構成設計書.md
+++ b/02_技術/マイクロサービス/DB設計/01_マイクロサービスデータベース構成設計書.md
@@ -194,6 +194,254 @@ graph TD
 
 ---
 
+# ◆ 単一物理データベスを使用するマイクロサービス構成設計書
+
+## 1. 概要
+
+### 1.1. 設計方針
+単一物理データベースを使用しながらも、マイクロサービスの設計原則（サービス自律性、疎結合性）を維持するための構成設計です。
+
+### 1.2. 適用条件
+- 開発初期段階または小規模システム
+- コスト制約がある環境
+- 段階的なマイグレーションを計画している場合
+
+## 2. データベース構成戦略
+
+### 2.1. 論理的分離構成
+
+**単一物理データベース内での論理的分離:**
+```sql
+-- サービスごとにスキーマを分離
+CREATE SCHEMA user_service;
+CREATE SCHEMA order_service; 
+CREATE SCHEMA product_service;
+CREATE SCHEMA payment_service;
+
+-- サービスごとのロール作成
+CREATE ROLE user_service_role;
+CREATE ROLE order_service_role;
+CREATE ROLE product_service_role;
+CREATE ROLE payment_service_role;
+```
+
+### 2.2. 接続設定例
+
+```yaml
+# 各マイクロサービスのデータベース接続設定
+user-service:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/company_db?currentSchema=user_service
+    username: user_service_user
+    password: ${USER_SERVICE_DB_PASSWORD}
+
+order-service:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/company_db?currentSchema=order_service
+    username: order_service_user
+    password: ${ORDER_SERVICE_DB_PASSWORD}
+```
+
+## 3. アクセス制御設計
+
+### 3.1. 権限管理
+
+```sql
+-- サービスごとのユーザー作成
+CREATE USER user_service_user WITH PASSWORD 'secure_password';
+CREATE USER order_service_user WITH PASSWORD 'secure_password';
+
+-- スキーマごとの権限制御
+GRANT USAGE ON SCHEMA user_service TO user_service_user;
+GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA user_service TO user_service_user;
+
+GRANT USAGE ON SCHEMA order_service TO order_service_user;
+GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA order_service TO order_service_user;
+
+-- 他のスキーマへのアクセス禁止
+REVOKE ALL PRIVILEGES ON SCHEMA user_service FROM order_service_user;
+REVOKE ALL PRIVILEGES ON SCHEMA order_service FROM user_service_user;
+```
+
+### 3.2. データアクセス制約
+- 各サービスは自身のスキーマのみアクセス可能
+- クロススキーマアクセスはAPI経由のみ許可
+- データベースレベルでの外部キー制約は禁止
+
+## 4. データモデル設計
+
+### 4.1. サービス別スキーマ設計
+
+**ユーザーサービススキーマ:**
+```sql
+CREATE TABLE user_service.users (
+    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+    email VARCHAR(255) UNIQUE NOT NULL,
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+);
+
+CREATE TABLE user_service.user_profiles (
+    user_id UUID PRIMARY KEY,
+    first_name VARCHAR(100),
+    last_name VARCHAR(100)
+);
+```
+
+**注文サービススキーマ:**
+```sql
+CREATE TABLE order_service.orders (
+    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+    user_id UUID NOT NULL, -- 参照のみ、外部キー制約なし
+    total_amount DECIMAL(10,2),
+    status VARCHAR(50)
+);
+
+CREATE TABLE order_service.order_items (
+    id UUID PRIMARY KEY,
+    order_id UUID,
+    product_id UUID,
+    quantity INTEGER
+);
+```
+
+## 5. サービス間データ連携
+
+### 5.1. APIベース連携
+```mermaid
+graph LR
+    A[Order Service] -->|API Call| B[User Service]
+    C[Product Service] -->|API Call| D[Order Service]
+```
+
+### 5.2. データ参照パターン
+```java
+// OrderServiceがUserServiceのデータを参照する例
+@Service
+public class OrderService {
+    
+    @Autowired
+    private UserServiceClient userServiceClient;
+    
+    public Order createOrder(CreateOrderRequest request) {
+        // API経由でユーザー情報を取得
+        User user = userServiceClient.getUser(request.getUserId());
+        
+        if (user == null) {
+            throw new UserNotFoundException("User not found");
+        }
+        
+        // 注文処理続行...
+    }
+}
+```
+
+## 6. データ整合性保証
+
+### 6.1. 分散トランザクション管理
+```java
+// Sagaパターンの実装例
+@Saga
+public class OrderCreationSaga {
+    
+    @Autowired
+    private OrderService orderService;
+    
+    @Autowired
+    private PaymentService paymentService;
+    
+    @Autowired
+    private InventoryService inventoryService;
+    
+    @StartSaga
+    @SagaEventHandler(associationProperty = "orderId")
+    public void handle(OrderCreatedEvent event) {
+        // 在庫確保
+        inventoryService.reserveInventory(event.getOrderId(), event.getItems());
+    }
+    
+    @SagaEventHandler(associationProperty = "orderId")
+    public void handle(InventoryReservedEvent event) {
+        // 支払い処理
+        paymentService.processPayment(event.getOrderId(), event.getAmount());
+    }
+}
+```
+
+## 7. 監視と運用
+
+### 7.1. パフォーマンス監視
+```sql
+-- スキーマごとのパフォーマンス監視クエリ
+SELECT 
+    schemaname,
+    relname,
+    seq_scan,
+    seq_tup_read,
+    idx_scan,
+    idx_tup_fetch
+FROM pg_stat_all_tables 
+WHERE schemaname LIKE '%_service';
+```
+
+### 7.2. リソース管理
+```sql
+-- スキーマごとのディスク使用量監視
+SELECT 
+    schemaname,
+    sum(pg_total_relation_size(schemaname || '.' || tablename)) as total_size
+FROM pg_tables 
+WHERE schemaname LIKE '%_service'
+GROUP BY schemaname;
+```
+
+## 8. 移行計画
+
+### 8.1. 段階的移行戦略
+1. **フェーズ1**: 単一DB内でのスキーマ分離
+2. **フェーズ2**: サービスごとの論理的分離の徹底
+3. **フェーズ3**: 物理的分離の準備（接続設定の抽象化）
+4. **フェーズ4**: 必要に応じた物理的分離の実施
+
+### 8.2. 将来の拡張性
+```yaml
+# 設定の抽象化による将来の移行容易性
+spring:
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/company_db}
+    schema: ${SERVICE_SCHEMA:user_service}
+```
+
+## 9. メリットと注意点
+
+### 9.1. メリット
+- 初期コストの削減
+- 管理の簡素化
+- 開発環境の構築が容易
+
+### 9.2. 注意点
+- パフォーマンス影響の監視が必要
+- スキーマ間の偶発的結合リスク
+- 将来の分離時の移行コスト
+
+## 10. ベストプラクティス
+
+### 10.1. 設計原則
+1. **スキーマ境界の厳守**: サービスは自身のスキーマのみ操作
+2. **APIファースト**: サービス間通信は常にAPI経由
+3. **透過的な移行準備**: 将来の物理分離を想定した設計
+
+### 10.2. 運用プラクティス
+- 定期的なスキーマ権限の監査
+- クロススキーマアクセスの監視
+- パフォーマンスベンチマークの定期実施
+
+---
+**この構成の適用条件**: 小規模チーム、初期開発段階、コスト制約環境
+
+**推奨移行時期**: ユーザー数増加、パフォーマンス要件の変化、セキュリティ要件の高度化に応じて物理的分離を検討
+
+---
+
 # ◆ マイクロサービスにおける最適な設計
 
 マイクロサービスアーキテクチャでは、データベース設計が非常に重要です。以下に最適なインスタンス、データベース設計を提案します。
