--- a/02_技術/マイクロサービス/DB設計/06_マスタテーブルサービス.md
+++ b/02_技術/マイクロサービス/DB設計/06_マスタテーブルサービス.md
@@ -2,12 +2,9 @@
 
 マイクロサービスアーキテクチャでは、マスタデータの管理が重要な課題です。以下に効果的な設計パターンを提案します。
 
----
-
 ## マスタデータの種類に応じた設計アプローチ
 
-### 1. 参照専用マスタデータ（推奨）
-
+### 1. **参照専用マスタデータ**（推奨）
 ```mermaid
 graph TD
     A[マスタ管理サービス] -->|公開| B[API Gateway]
@@ -16,8 +13,7 @@ graph TD
     B -->|参照| E[マイクロサービスC]
 ```
 
-実装例:
-
+**実装例**:
 ```python
 # マスタ管理サービス
 class MasterDataService:
@@ -33,8 +29,7 @@ class OrderService:
         # 注文処理続行
 ```
 
-### 2. データ重複パターン（高パフォーマンス向け）
-
+### 2. **データ重複パターン**（高パフォーマンス向け）
 ```mermaid
 graph LR
     A[マスタ管理サービス] -->|イベント発行| B[イベントバス]
@@ -42,8 +37,7 @@ graph LR
     B -->|購読| D[サービスB ローカルコピー]
 ```
 
-実装例:
-
+**実装例**:
 ```sql
 -- 各サービス内のローカルマスタテーブル
 CREATE TABLE local_products (
@@ -72,7 +66,6 @@ def handle_product_updated(event):
 ## 設計パターン別詳細
 
 ### パターン1: マスタ専用サービス
-
 ```python
 # master_service/app.py
 from flask import Flask, jsonify
@@ -90,7 +83,6 @@ def update_product():
 ```
 
 ### パターン2: イベント駆動レプリケーション
-
 ```python
 # マスタサービスでの更新処理
 def update_product_price(product_id, new_price):
@@ -108,8 +100,7 @@ def update_product_price(product_id, new_price):
 
 ## キャッシュ戦略
 
-Redisキャッシュの導入
-
+### Redisキャッシュの導入
 ```python
 # マスタデータ取得時のキャッシュ利用
 def get_product_with_cache(product_id):
@@ -130,7 +121,6 @@ def get_product_with_cache(product_id):
 ## 整合性保証のための設計
 
 ### 1. イベントソーシングパターン
-
 ```python
 class ProductMaster:
     def __init__(self):
@@ -153,7 +143,6 @@ class ProductMaster:
 ```
 
 ### 2. CDC（Change Data Capture）パターン
-
 ```sql
 -- PostgreSQLの論理レプリケーションを活用
 CREATE PUBLICATION master_publication FOR TABLE products, categories;
@@ -166,8 +155,7 @@ PUBLICATION master_publication;
 
 ## サービス間のデータ依存性管理
 
-バージョン管理の導入
-
+### バージョン管理の導入
 ```python
 # マスタデータにバージョン情報を追加
 class Product(Base):
@@ -195,7 +183,6 @@ Response:
 ## フェデレーテッドクエリパターン
 
 ### GraphQLの活用
-
 ```graphql
 # マスタデータ用GraphQLスキーマ
 type Product {
@@ -228,7 +215,6 @@ class Query(graphene.ObjectType):
 ## 監視と運用設計
 
 ### データ整合性監視
-
 ```python
 # 定期的な整合性チェック
 def check_data_consistency():
@@ -245,11 +231,12 @@ def check_data_consistency():
 
 ## 推奨アプローチ選択の判断基準
 
-* シナリオ 推奨パターン 理由
-* リアルタイム整合性必須 マスタ専用サービス + API呼び出し 常に最新データを提供
-* 高パフォーマンス要求 イベント駆動レプリケーション ローカルアクセス可能
-* 大規模データ CDCパターン 効率的なデータ同期
-* 複雑なクエリ要求 GraphQLフェデレーション 柔軟なデータ取得
+| シナリオ | 推奨パターン | 理由 |
+|---------|-------------|------|
+| リアルタイム整合性必須 | マスタ専用サービス + API呼び出し | 常に最新データを提供 |
+| 高パフォーマンス要求 | イベント駆動レプリケーション | ローカルアクセス可能 |
+| 大規模データ | CDCパターン | 効率的なデータ同期 |
+| 複雑なクエリ要求 | GraphQLフェデレーション | 柔軟なデータ取得 |
 
 ## セキュリティ考慮事項
 
