--- a/02_技術/AI/06_AIサービス標準アーキテクチャ.md
+++ b/02_技術/AI/06_AIサービス標準アーキテクチャ.md
@@ -1,6 +1,6 @@
 # ◆ AIサービス標準アーキテクチャ
 
-以下に、**BtoB向けAIサービス**（**LLM／RAG前提**）**の**「**標準アーキテクチャ**（**実運用レベル**）」を
+以下に、**BtoB向けAIサービス**（**LLM／RAG前提**）**の**「**標準アーキテクチャ**（**実運用レベル**）」を<br>
 👉 **事業化・継続利用・非AI企業対応**まで考慮した形で示します。
 
 ---
@@ -104,7 +104,7 @@
 #### 実装ポイント
 
 * Slack／Teams／業務画面に自然埋め込み
-* 「質問してください」ではなく
+* 「質問してください」ではなく<br>
   👉 **業務ボタン（要約／確認／提案）**
 
 ---
