--- a/02_技術/AI/07_AIサービス30日導入テンプレート.md
+++ b/02_技術/AI/07_AIサービス30日導入テンプレート.md
@@ -4,6 +4,13 @@
 「PoCで終わらせず、本番・継続利用まで到達させる」ための
 **30日間・標準導入テンプレート**です。
 
+この資料は次の用途を想定して作っています：
+
+* ✅ **提案資料（AI導入パッケージ）**
+* ✅ **SI／内製AI導入の標準手順書**
+* ✅ **PoC止まりを防ぐチェックリスト**
+* ✅ **LTV前提のサービス設計ベース**
+
 ---
 
 ## 0. 全体方針（最重要）
