--- a/02_技術/AI/07_AIサービス30日導入テンプレート.md
+++ b/02_技術/AI/07_AIサービス30日導入テンプレート.md
@@ -1,4 +1,4 @@
-# AIサービス 30日導入テンプレート（BtoB向け・RAG/LLM）
+# ◆ AIサービス 30日導入テンプレート（BtoB向け・RAG/LLM）
 
 本資料は、**AIを事業価値に変換すること**を目的とした
 「PoCで終わらせず、本番・継続利用まで到達させる」ための
