--- a/04_インフラ/80_テスト(試験)/02_金融・公共向けテスト計画書（標準）.md
+++ b/04_インフラ/80_テスト(試験)/02_金融・公共向けテスト計画書（標準）.md
@@ -1,4 +1,4 @@
-# ◆ 金融・公共向け 厳格テスト計画書（標準）
+# ◆ 金融・公共向け テスト計画書（標準）
 
 以下は、**金融・公共向けシステムにおける**「**厳格テスト計画**」を、
 **監査・規程・統制・証跡**まで含めて **そのまま計画書として使えるレベル**で整理したものです。
