--- a/88_業務知識/02_小売/在庫管理システムの業務知識.md
+++ b/88_業務知識/02_小売/在庫管理システムの業務知識.md
@@ -597,7 +597,7 @@
 | WMS      | **物理在庫・作業指示・実績管理** |
 | 現場       | **実作業（動かす・数える）**   |
 
-👉 **「在庫数を決める」のは在庫管理システム**
+👉 **「在庫数を決める」のは在庫管理システム**<br>
 👉 **「どこから取るか・どう動くか」はWMS**
 
 ---
